@@ -293,7 +293,8 @@
   "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.header": "suouu\u0250\u0186 d\u2229-\u0287\u05DF\u0131n\u15FA bu\u0131\u0265s\u0131u\u0131\u2132",
   "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_1": "\u02D9s\u029E\u0254o\u05DFq uouu\u0250\u0254 dn-\u0287\u05DF\u0131nq o\u0287u\u0131 \u026F\u01DD\u0265\u0287 su\u0279n\u0287 s\u0279\u01DD\u028E\u0250\u05DF uouu\u0250\u0254 dn-\u0287\u05DF\u0131nq bu\u0131\u0287s\u0250\u05DF\u15FA",
   "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_2": "\u02D9\u0287u\u01DD\u0279\u0279n\u0254 bu\u0131\u0287\u0250\u01DD\u0265 \u0250 \u01DD\u0254npo\u0279d o\u0287 \u029E\u0254o\u05DFq \u0250\u028C\u0250\u05DF \u0250 o\u0287u\u0131 bu\u0131\u028Do\u05DFq u\u0250\u025F \u0250 bu\u0131sn 's\u026F\u01DD\u0287\u0131 \u025Fo bu\u0131\u0287s\u0250\u05DFq \u029E\u05DFnq o\u0287 \u0279\u0250\u05DF\u0131\u026F\u0131s s\u029E\u0279o\u028D ss\u01DD\u0254o\u0279d \u01DD\u0265\u27D8",
-  "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_3": "\u02D9s\u029E\u0254o\u05DFq uouu\u0250\u0254 o\u0287u\u0131 \u026F\u0279o\u025Fsu\u0250\u0279\u0287 o\u0287 s\u0279\u01DD\u028E\u0250\u05DF uouu\u0250\u0254 \u01DD\u0265\u0287 \u0279o\u025F \u01DD\u05DF\u0131\u0265\u028D \u0250 s\u01DD\u029E\u0250\u0287 \u0287I",
+  "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_3": "\u02D9p\u01DD\u026F\u0279o\u025Fsu\u0250\u0279\u0287 \u01DDq o\u0287 s\u0279\u01DD\u028E\u0250\u05DF \u0287\u0254\u01DD\u0279\u0279o\u0254 \u01DD\u0265\u0287 \u05DF\u05DF\u0250 \u01DD\u028C\u0250\u0265 \u0287sn\u026F \u029E\u0254o\u05DFq uouu\u0250\u0254 dn-\u0287\u05DF\u0131nq \u2C6F",
+  "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_4": "\u02D9s\u029E\u0254o\u05DFq uouu\u0250\u0254 o\u0287u\u0131 \u026F\u0279o\u025Fsu\u0250\u0279\u0287 o\u0287 s\u0279\u01DD\u028E\u0250\u05DF uouu\u0250\u0254 \u01DD\u0265\u0287 \u0279o\u025F \u01DD\u05DF\u0131\u0265\u028D \u0250 s\u01DD\u029E\u0250\u0287 \u0287I",
   "createbigcannons.ponder.cannon_crafting/incomplete_cannon_blocks.header": "s\u029E\u0254o\u05DF\u15FA uouu\u0250\u0186 \u01DD\u0287\u01DD\u05DFd\u026Fo\u0254uI",
   "createbigcannons.ponder.cannon_crafting/incomplete_cannon_blocks.text_1": "\u02D9p\u01DD\u0287\u01DD\u05DFd\u026Fo\u0254 \u01DDq o\u0287 s\u026F\u01DD\u0287\u0131 \u05DF\u0250uo\u0131\u0287\u0131pp\u0250 p\u01DD\u01DDu s\u029E\u0254o\u05DFq uouu\u0250\u0254 p\u01DD\u0279oq \u01DD\u026FoS",
   "createbigcannons.ponder.cannon_crafting/incomplete_cannon_blocks.text_2": "\u02D9s\u029E\u0254o\u05DFq \u0265\u0254\u01DD\u01DD\u0279q uouu\u0250\u0254 \u028E\u05DF\u05DF\u0250nsn \u01DD\u0279\u0250 \u01DDs\u01DD\u0265\u27D8",
