@@ -293,7 +293,8 @@
   "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.header": "Finishing Built-Up Cannons",
   "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_1": "Blasting built-up cannon layers turns them into built-up cannon blocks.",
   "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_2": "The process works similar to bulk blasting of items, using a fan blowing into a lava block to produce a heating current.",
-  "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_3": "It takes a while for the cannon layers to transform into cannon blocks.",
+  "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_3": "A built-up cannon block must have all the correct layers to be transformed.",
+  "createbigcannons.ponder.cannon_crafting/finishing_built_up_cannons.text_4": "It takes a while for the cannon layers to transform into cannon blocks.",
   "createbigcannons.ponder.cannon_crafting/incomplete_cannon_blocks.header": "Incomplete Cannon Blocks",
   "createbigcannons.ponder.cannon_crafting/incomplete_cannon_blocks.text_1": "Some bored cannon blocks need additional items to be completed.",
   "createbigcannons.ponder.cannon_crafting/incomplete_cannon_blocks.text_2": "These are usually cannon breech blocks.",
